tests/syntax_error/and_or_chaining.jou
def main() -> int:
    # Jou's behaviour is different from Python and C, but consistent with Python's
    # philosophy: explicit is good, as long as it is readable.
    x = (a and b) or c  # no error
    y = a and b or c  # Error: 'and' cannot be chained with 'or', you need more parentheses
